# math4141

./: .gitmodules  README.md  compile_commands.json
assignments/assignment1/: :w  root.aux  root.out
assignments/assignment1/latex/: root.tex
src/: .ycm_extra_conf.py  CMakeLists.txt
src/arcmath/: MinNelderMead.cpp  MinNelderMead.hpp
src/arcmath/old/: MinNelderMead.cpp  MinNelderMead.hpp
src/playground/: CMakeLists.txt  Main.cpp
src/simplex/: CMakeLists.txt  Main.cpp
